# ci-test

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CI.AppVeyor.VS2013.32.Debug.cmd  CI.AppVeyor.VS2013.32.Release.cmd  CI.AppVeyor.VS2013.32.cmd  CI.AppVeyor.VS2013.64.Debug.cmd  CI.AppVeyor.VS2013.64.Release.cmd  CI.AppVeyor.VS2013.64.cmd  CI.AppVeyor.VS2015.32.Debug.cmd  CI.AppVeyor.VS2015.32.Release.cmd  CI.AppVeyor.VS2015.32.cmd  CI.AppVeyor.VS2015.64.Debug.cmd  CI.AppVeyor.VS2015.64.Release.cmd  CI.AppVeyor.VS2015.64.cmd  CI.AppVeyor.VS2017.32.Debug.cmd  CI.AppVeyor.VS2017.32.Release.cmd  CI.AppVeyor.VS2017.32.cmd  CI.AppVeyor.VS2017.64.Debug.cmd  CI.AppVeyor.VS2017.64.Release.cmd  CI.AppVeyor.VS2017.64.cmd  CMakeBuild.cmake  CMakeLists.txt  README.md  ci-test.cpp  class_initializer.cpp  filesystem.cpp  for_auto.cpp  for_lambda.cpp  vector_initializer.cpp
cmake/CI/: GetCMake.cmake  UpdateCMake.cmake
source/: arch.cpp  filesystem.cpp  vector_initializer.cpp
